--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "ts-node-dev --transpile-only src/app.ts"
+    "start": "ts-node-dev --transpile-only src/main/server.ts"
   },
   "keywords": [],
   "author": "Mateus Araújo",
@@ -20,6 +20,7 @@
     "typescript": "^4.0.5"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1"
